--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,10 +32,19 @@
     }
   },
   "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/node_modules": true,
+    "**/src/build/": true,
     ".nodevenv": true,
     ".venv": true,
     ".zcompdump": true,
     ".zsh_history": true
   },
-  "python.analysis.importFormat": "relative"
+  "python.analysis.importFormat": "relative",
+  "explorerExclude.backup": {}
 }
