--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -62,6 +62,7 @@
     "babel-jest": "^29.4.3",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.4.3",
+    "react": "^18.2.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
