[GraphQL] Remove Billing queue delay

--- a/graphql-service/template.yaml
+++ b/graphql-service/template.yaml
@@ -231,7 +231,7 @@ Resources:
     Properties:
       QueueName: graphql-service-billing-queue.fifo
       FifoQueue: true
-      DelaySeconds: 60 # Delay so that the billing is triggered after the UsageLogs are created
+      # DelaySeconds: 5 # Delay so that the billing is triggered after the UsageLogs are created
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt BillingDeadLetterQueue.Arn
         maxReceiveCount: 3
