[Payment] Add FinishOnboard and delete v1 apis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,6 @@
     ".zsh_history": true
   },
   "python.analysis.importFormat": "relative",
-  "explorerExclude.backup": {}
+  "explorerExclude.backup": {},
+  "python.formatting.provider": "black"
 }
