--- a/payment-service/template.yaml
+++ b/payment-service/template.yaml
@@ -19,22 +19,11 @@ Parameters:
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
   Function:
-    Timeout: 10
-    MemorySize: 128
     Tracing: Active
   Api:
     TracingEnabled: true
 
 Resources:
-  GenerateCertificate: # Creates a valid certificate for the HTTP API endpoint under the custom domain
-    Type: AWS::CertificateManager::Certificate
-    Properties:
-      DomainName: !Ref GatewayHostName
-      ValidationMethod: DNS
-      DomainValidationOptions:
-        - DomainName: !Ref GatewayHostName
-          HostedZoneId: Z0358815GI2I8U5CTHXW
-
   GenerateCertificateV2: # Creates a valid certificate for the HTTP API endpoint under the custom domain
     Type: AWS::CertificateManager::Certificate
     Properties:
@@ -43,43 +32,6 @@ Resources:
       DomainValidationOptions:
         - DomainName: !Ref GatewayHostNameV2
           HostedZoneId: Z0358815GI2I8U5CTHXW
-
-  APIGateway:
-    Type: AWS::Serverless::Api
-    Properties:
-      Domain:
-        DomainName: !Ref GatewayHostName
-        CertificateArn: !Ref GenerateCertificate
-        Route53:
-          HostedZoneId: Z0358815GI2I8U5CTHXW
-      StageName: !Ref Stage
-      MethodSettings:
-        - LoggingLevel: ERROR
-          MetricsEnabled: True
-          ResourcePath: "/*" # allows for logging on any resource
-          HttpMethod: "*" # allows for logging on any method
-      Auth: # Uses the FirebaseTokenAuthorizer to identify the session user.
-        ApiKeyRequired: false
-        DefaultAuthorizer: FirebaseTokenAuthorizer
-        Authorizers:
-          FirebaseTokenAuthorizer:
-            FunctionPayloadType: REQUEST
-            FunctionArn: arn:aws:lambda:us-east-1:887279901853:function:FirebaseTokenAuthorizer
-            Identity:
-              ReauthorizeEvery: 300
-              Headers: ["Authorization"]
-      Cors:
-        AllowMethods: "'*'"
-        AllowHeaders: "'*'"
-        AllowOrigin: "'*'"
-      GatewayResponses:
-        UNAUTHORIZED: # This is hacky but right now the only way to handle an OPTION request without failing
-          StatusCode: 200
-          ResponseParameters:
-            Headers:
-              Access-Control-Allow-Methods: "'*'"
-              Access-Control-Allow-Headers: "'*'"
-              Access-Control-Allow-Origin: "'*'"
 
   APIGatewayV2:
     Type: AWS::Serverless::HttpApi
@@ -143,29 +95,6 @@ Resources:
       Roles:
         - !Ref APIGatewayV2Role
 
-  StripeConnectOnboardAcceptWebhook:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-    Properties:
-      CodeUri: app/
-      Handler: onboard_accept.lambda_handler
-      Runtime: python3.9
-      Architectures:
-        - arm64 # if you are using Apple M1
-      Timeout: 10
-      Policies:
-        - AmazonAPIGatewayInvokeFullAccess # This will allow this lambda to send http request to the graphql api
-        - AWSLambdaRole # This will allow this lambda to send http request to the graphql api
-        - AmazonSQSFullAccess # Allows sending billing to the graphql service
-      Events:
-        POST:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            RestApiId: !Ref APIGateway
-            Path: /onboard/accept
-            Method: post
-            Auth:
-              Authorizer: NONE
-
   ExecuteDailyStripeTransferCronJob:
     Type: AWS::Serverless::Function
     Properties:
@@ -178,7 +107,8 @@ Resources:
         - AWSLambdaRole
         - AmazonDynamoDBFullAccess # Give the Lambda service access to poll your DynamoDB Stream
       ReservedConcurrentExecutions: 1
-      Timeout: 300
+      Timeout: 60
+      MemorySize: 3008
       Events:
         ScheduledTrigger12AM:
           ScheduleEvent:
@@ -237,11 +167,12 @@ Resources:
       Runtime: nodejs18.x
       Architectures:
         - arm64 # if you are using Apple M1
-      MemorySize: 128
+      MemorySize: 512
       Timeout: 10
       Policies:
         - AWSLambdaRole
         - AmazonDynamoDBReadOnlyAccess # For looking up user's stripe id
+        - AmazonSSMReadOnlyAccess # Need to get credentials for the Stripe API
       Events:
         POST:
           Type: HttpApi # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
@@ -264,7 +195,7 @@ Resources:
       Runtime: nodejs18.x
       Architectures:
         - arm64 # if you are using Apple M1
-      MemorySize: 512
+      MemorySize: 3008
       Timeout: 10
       Policies:
         - AWSLambdaRole
@@ -300,7 +231,7 @@ Resources:
       Policies:
         - AWSLambdaRole
         - AmazonDynamoDBFullAccess # Create and update order
-        - AmazonSSMReadOnlyAccess # Need to use the Stripe API
+        - AmazonSSMReadOnlyAccess # Need to get credentials for the Stripe API
         - AmazonSQSFullAccess # Need to send SQS billing request to settle stripePaymentAccept
       Events:
         POST:
@@ -329,7 +260,7 @@ Resources:
       Policies:
         - AWSLambdaRole
         - AmazonDynamoDBFullAccess # Create and update order
-        - AmazonSSMReadOnlyAccess # Need to use the Stripe API
+        - AmazonSSMReadOnlyAccess # Need to get credentials for the Stripe API
         - AmazonSQSFullAccess # Need to send SQS billing request to settle stripePaymentAccept
       Events:
         POST:
@@ -345,7 +276,36 @@ Resources:
         EntryPoints:
           - CreateStripeTransfer.ts
 
-Outputs:
-  APIGateway:
-    Description: API APIGateway endpoint URL for DEV stage for Hello World function
-    Value: !Sub "https://${APIGateway}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/echo"
+  FinishOnboard:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      CodeUri: handlers/
+      Handler: FinishOnboard.lambdaHandler
+      Runtime: nodejs18.x
+      Architectures:
+        - arm64 # if you are using Apple M1
+      MemorySize: 512
+      Timeout: 10
+      Policies:
+        - AWSLambdaRole
+        - AmazonDynamoDBFullAccess # Update user for connect account id
+        - AmazonSSMReadOnlyAccess # Need to get credentials for the Stripe API
+      Events:
+        POST:
+          Type: HttpApi # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Auth:
+              Authorizer: NONE
+            ApiId: !Ref APIGatewayV2
+            Path: /finish-onboard
+            Method: post
+    Metadata: # Manage esbuild properties
+      BuildMethod: esbuild
+      BuildProperties:
+        Target: "es2022"
+        EntryPoints:
+          - FinishOnboard.ts
+# Outputs:
+#   APIGateway:
+#     Description: API APIGateway endpoint URL for DEV stage for Hello World function
+#     Value: !Sub "https://${APIGateway}.execute-api.${AWS::Region}.amazonaws.com/${Stage}/echo"
