--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
-    "build": "npm run gen && sam build",
+    "build": "npm run symlink && npm run gen && tsc --noEmit && sam build --cached --parallel",
     "deploy": "npm run build && sam deploy",
     "stripe": "stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/accept-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/finish-onboard -e 'account.updated'",
     "logs": "sam logs --stack-name payment-service --tail",
