[React] Fix font & style

--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -18,7 +18,8 @@
     "@aws-sdk/client-sqs": "^3.279.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.9",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.9",
     "@mui/x-date-pickers": "^5.0.20",
     "chart.js": "^4.2.1",
