--- a/cli/package.json
+++ b/cli/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "poetry build",
+    "deploy": "npm run build && poetry publish -r testpypi"
   },
   "author": "",
   "license": "ISC"
