--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,19 +32,19 @@
     }
   },
   "files.exclude": {
-    "**/.git": true,
-    "**/.svn": true,
-    "**/.hg": true,
-    "**/CVS": true,
-    "**/.DS_Store": true,
-    "**/Thumbs.db": true,
-    "**/node_modules": true,
-    "**/src/build/": true,
     ".nodevenv": true,
     ".venv": true,
     ".zcompdump": true,
     ".zsh_history": true,
-    ".symlinks": true,
+    "**/.DS_Store": true,
+    "**/.git": true,
+    "**/.hg": true,
+    "**/.svn": true,
+    "**/.symlinks/*": true,
+    "**/CVS": true,
+    "**/node_modules": true,
+    "**/src/build/": true,
+    "**/Thumbs.db": true
   },
   "python.analysis.importFormat": "relative",
   "explorerExclude.backup": {},
