--- a/auth-service/.gitignore
+++ b/auth-service/.gitignore
@@ -243,4 +243,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
-.symlink/
+.symlinks/
