[Auth] Add FirebaseTokenAuthorizerAllowingAnonymousUser

--- a/auth-service/template.yaml
+++ b/auth-service/template.yaml
@@ -50,6 +50,21 @@ Resources:
         Variables:
           AllowUserAppToken: "1"
 
+  FirebaseTokenAuthorizerAllowingAnonymousUser:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Metadata:
+      BuildMethod: go1.x
+    Properties:
+      CodeUri: ./app
+      Handler: bootstrap
+      Runtime: provided.al2
+      Architectures:
+        - arm64
+      FunctionName: FirebaseTokenAuthorizerAllowingAnonymousUser
+      Environment:
+        Variables:
+          AllowAnonymousUser: "1"
+
   CliAuthBucket:
     Type: AWS::S3::Bucket
     Properties:
