--- a/graphql-service/template.yaml
+++ b/graphql-service/template.yaml
@@ -65,13 +65,13 @@ Resources:
           MetricsEnabled: True
           ResourcePath: "/*" # allows for logging on any resource
           HttpMethod: "*" # allows for logging on any method
-      Auth: # Uses the FirebaseTokenAuthorizer to identify the session user.
+      Auth: # Uses the FirebaseTokenAuthorizerAllowingAnonymousUser to identify the session user.
         ApiKeyRequired: false
-        DefaultAuthorizer: FirebaseTokenAuthorizer
+        DefaultAuthorizer: FirebaseTokenAuthorizerAllowingAnonymousUser
         Authorizers:
-          FirebaseTokenAuthorizer:
+          FirebaseTokenAuthorizerAllowingAnonymousUser:
             FunctionPayloadType: REQUEST
-            FunctionArn: arn:aws:lambda:us-east-1:887279901853:function:FirebaseTokenAuthorizer
+            FunctionArn: arn:aws:lambda:us-east-1:887279901853:function:FirebaseTokenAuthorizerAllowingAnonymousUser
             Identity:
               ReauthorizeEvery: 300
               Headers: ["Authorization"]
