[Search] Add a barebone search-service

--- a/payment-service/tsconfig.json
+++ b/payment-service/tsconfig.json
@@ -27,6 +27,7 @@
     "strictPropertyInitialization": false, // doesn't work with our Item type declarations in models.ts
     "allowJs": true,
     "strict": true,
+    "noEmit": true,
     "baseUrl": "./",
     "paths": {
       "graphql-service": [
