--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -4,7 +4,7 @@
   "description": "This project contains source code and supporting files for a serverless application that you can deploy with the SAM CLI. It includes the following files and folders.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cd apollo && npm run test",
     "build": "npm run typecheck && sam build",
     "start": "npm run build && sam local start-api -p 4000 --warm-containers lazy --env-vars ./devenv.json",
     "logs": "sam logs --stack-name graphql-service --tail",
