--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -17,7 +17,8 @@
     "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
     "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
     "test": "jest --runInBand",
-    "fix": "eslint --fix ./"
+    "fix": "eslint --fix ./",
+    "typecheck": "npm run gen && tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
