[React] Migrate to userPK

--- a/react/fastchargeapi/package.json
+++ b/react/fastchargeapi/package.json
@@ -8,7 +8,7 @@
     "build": "npm run gen && react-scripts build",
     "test": "npm run gen && react-scripts test",
     "start": "npm run gen && PORT=8000 react-scripts start",
-    "watch": "nodemon -e ts,tsx,yml,yaml -i build/ -i src/__generated__ --exec 'npm run gen' & PORT=8000 react-scripts start",
+    "watch": "nodemon -e ts,tsx,yml,yaml -i build/ -i src/__generated__ --exec 'npm run gen' & PORT=8000 FORCE_COLOR=true react-scripts start | cat",
     "new-page": "node ../react-appevent-redux-tools/dist/index.js",
     "fix": "eslint --fix ./"
   },
@@ -29,6 +29,7 @@
     "jose": "^4.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-appevent-redux": "github:ylilarry/react-appevent-redux#dist",
     "react-chartjs-2": "^5.2.0",
@@ -49,6 +50,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/md5": "^2.3.2",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
