--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -27,6 +27,9 @@ fastapi = 'fastchargeapi_cli.main:fastapi'
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
+turms = "^0.3.1"
+pydantic = "^1.10.6"
+pyright = "^1.1.299"
 
 [build-system]
 requires = ["poetry-core"]
