[CLI] Add pyright

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,6 @@
   },
   "python.analysis.importFormat": "relative",
   "explorerExclude.backup": {},
-  "python.formatting.provider": "black"
+  "python.formatting.provider": "black",
+  "python.analysis.typeCheckingMode": "basic"
 }
