[GraphQL] Add permissions for User resolvers

--- a/graphql-service/package.json
+++ b/graphql-service/package.json
@@ -9,7 +9,7 @@
     "start": "npm run build && sam local start-api -p 4000 --warm-containers lazy --env-vars ./devenv.json",
     "logs": "sam logs --stack-name graphql-service --tail",
     "deploy": "npm run build && sam deploy",
-    "typecheck": "cd ../payment-service && npm run typecheck && cd ../auth-service && npm run typecheck",
+    "typecheck": "cd ../payment-service && npm run typecheck && cd ../auth-service && npm run typecheck && cd ../cli && npm run typecheck",
     "fix": "cd apollo && eslint --fix ./"
   },
   "author": "",
