--- a/graphql-service/apollo/package.json
+++ b/graphql-service/apollo/package.json
@@ -11,7 +11,8 @@
     "watch": "npx nodemon -e yml,ts,graphql,json -i ./__generated__ --signal SIGINT -x \"npm run build && npm run start || exit 1\"",
     "test": "jest --runInBand",
     "sam": "cd ../ && make watch",
-    "fix": "eslint --fix ./"
+    "fix": "eslint --fix ./",
+    "typecheck": "npm run gen && tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
