--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -15,7 +15,7 @@
     "stripe": "stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/accept-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/finish-onboard -e 'account.updated'",
     "logs": "sam logs --stack-name payment-service --tail",
     "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
-    "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
+    "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run typecheck'",
     "test": "jest --runInBand",
     "fix": "eslint --fix ./",
     "typecheck": "npm run gen && tsc --noEmit"
