[Payment] Rename GetOnboardLink to GetStripeOnboardLink

--- a/payment-service/template.yaml
+++ b/payment-service/template.yaml
@@ -160,11 +160,11 @@ Resources:
         EntryPoints:
           - handlers/SendStripeDashboardLink.ts
 
-  GetOnBoardLink:
+  GetStripeOnBoardLink:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       CodeUri: ./
-      Handler: GetOnBoardLink.lambdaHandler
+      Handler: GetStripeOnBoardLink.lambdaHandler
       Runtime: nodejs18.x
       Architectures:
         - arm64 # if you are using Apple M1
@@ -179,14 +179,14 @@ Resources:
           Type: HttpApi # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             ApiId: !Ref APIGatewayV2
-            Path: /get-onboard-link
+            Path: /get-stripe-onboard-link
             Method: post
     Metadata: # Manage esbuild properties
       BuildMethod: esbuild
       BuildProperties:
         Target: "es2022"
         EntryPoints:
-          - handlers/GetOnBoardLink.ts
+          - handlers/GetStripeOnBoardLink.ts
 
   AcceptStripePayment:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
