--- a/react/fastchargeapi/public/manifest.json
+++ b/react/fastchargeapi/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FastchargeAPI",
+  "name": "Publish and sell your API",
   "icons": [
     {
       "src": "favicon.ico",
